# Emphant-Studio

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/release-notes/: default.md  v0.1.0.md
.github/workflows/: release.yml
.pnpm-store/v11/: index.db-shm  index.db-wal
apps/desktop/: eslint.config.js  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: cytoscape-fcose.d.ts  main.tsx  vite-env.d.ts
apps/desktop/src/renderer/src/hooks/: useWindowDrag.ts
apps/desktop/src/renderer/src/lib/: desktopApi.ts  intentPlanner.ts  knowledge.ts  mockAi.ts  workbenchDb.ts
apps/desktop/src/renderer/src/pages/agents/: AgentsPage.tsx
apps/desktop/src/renderer/src/pages/files/: FilesPage.tsx
apps/desktop/src/renderer/src/pages/home/: HomePage.tsx
apps/desktop/src/renderer/src/pages/knowledge/: KnowledgeGraphVisual.tsx  KnowledgePage.tsx
apps/desktop/src/renderer/src/pages/notes/: NotesPage.tsx
apps/desktop/src/renderer/src/pages/profile/: ProfilePage.tsx  ProfileSettingsPage.tsx  index.ts
apps/desktop/src/renderer/src/pages/settings/: SettingsPage.tsx
apps/desktop/src/renderer/src/pages/skills/: SkillsPage.tsx
apps/desktop/src/renderer/src/pages/todo/: TodoPage.tsx
apps/desktop/src/renderer/src/router/: AppRouter.tsx
apps/desktop/src/renderer/src/shell/: AppNavbar.tsx  AppShell.tsx  useBackgroundTaskManager.ts
apps/desktop/src/renderer/src/store/: index.ts  workbenchSlice.ts
apps/desktop/src/renderer/src/styles/: global.css
docs/: product-adjustment-todo.md
skills/linux-server-ops/: SKILL.md  skill.json
skills/linux-server-ops/agents/: openai.yaml
skills/linux-server-ops/references/: checklists.md
