[package]
name = "emphant-studio-tauri"
version = "0.1.0"
description = "Emphant Studio Tauri desktop AI workspace"
authors = ["Emphant Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "emphant_studio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
imap = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
lettre = { version = "0.11", features = ["builder", "smtp-transport", "rustls-tls"], default-features = false }
mailparse = "0.15"
mime_guess = "2"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
